--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -14,6 +14,7 @@
 
 body, html {
   background-color: var(--bckg-color);
+  --bs-body-font-family:  Arial, Helvetica, sans-serif;
 }
 
 .logo {
@@ -24,6 +25,7 @@ body, html {
 .carousel{
   margin-top: 4rem;
 }
+
 .carroussel-image, .card-img-top{
   object-fit: cover;
   object-position: center;
@@ -54,6 +56,24 @@ h1.title{
   justify-content: center;
   display: flex;
 }
+.content-main{
+  width: 80%;
+  margin: auto;
+}
+.nav-tabs .nav-link-hover{
+  --bs-nav-tabs-link-hover-border-color: var(--title);
+  --bs-link-hover-color: var(--title);
+  --bs-nav-link-hover-color: var(--title);
+}
+
+.nav-link{
+  --bs-nav-link-color: var(--title);
+}
+.nav-tabs .active{
+  --bs-nav-tabs-link-active-color: var(--title);
+  --bs-nav-tabs-link-active-border-color: var(--lightgreen)
+}
+
 .light-green{
   color: var(--lightgreen);
 }
